--- a/config.gradle
+++ b/config.gradle
@@ -98,7 +98,9 @@ ext {
                 "logger"                   : "com.orhanobut:logger:2.1.1",
                 "canary-debug"             : "com.squareup.leakcanary:leakcanary-android:${version["canarySdkVersion"]}",
                 "canary-release"           : "com.squareup.leakcanary:leakcanary-android-no-op:${version["canarySdkVersion"]}",
-                "umeng-analytics"          : "com.umeng.analytics:analytics:6.0.1"
+                "umeng-analytics"          : "com.umeng.analytics:analytics:6.0.1",
+
+                 "moligy-mvp-arms"         : "me.moligy.mvp:arms:2.2.1"
         ]
 
 
